# sre-meetup-6th-demo

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  app.py  docker-compose.yml  pyproject.toml  skaffold.yaml  skaffold_prepare.sh
helm/demo-sre-meetup/: Chart.yaml  values.yaml
helm/demo-sre-meetup/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  ingress.yaml  service.yaml
static/: style.css
templates/: index.html
