[project]
name = "preply-sre-meetup-demo-skaffold"
version = "0.1.0"
description = "Preply SRE meetup demo for skaffold"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "watchdog==6.0.0",
    "argostranslate==1.9.6",
    "fastapi==0.115.12",
    "uvicorn[standard]==0.34.0",
    "jinja2==3.1.6",
    "python-multipart==0.0.20",
]
